tests/pos/wl00.fq
qualif Nat(v:int) : (0 <= v)

bind 0 x0 : {v: int | [$k0]}
bind 0 x1 : {v: int | [$k1]}

constraint:
  env [ ]
  lhs {v : int | [v = 10]}
  rhs {v : int | [$k0]}
  id 1 tag []

constraint:
  env [ ]
  lhs {v : int | [v = 20]}
  rhs {v : int | [$k0]}
  id 2 tag []

constraint:
  env [ 0 ]
  lhs {v : int | [v = x0 + 1]}
  rhs {v : int | [$k1]}
  id 3 tag []


constraint:
  env [ 1 ]
  lhs {v : int | [v = x1 + 1]}
  rhs {v : int | [$k0]}
  id 4 tag []


constraint:
  env [ 1 ]
  lhs {v : int | [v = x1 + 1]}
  rhs {v : int | [0 <= v]}
  id 5 tag []

wf:
  env [ ]
  reft {v: int | [$k0]}


wf:
  env [ ]
  reft {v: int | [$k1]}
